# discord-spam-reporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: actionlint.yml  ci.yml  docker.yml  dockerlint.yml  validate-renovate.yml
scripts/: start.sh
src/: config.rs  handler.rs  lib.rs  main.rs  parse_regexp.rs  parsers.rs  vars.rs
src/parsers/: parse_role_id.rs
