[package]
name = "discord-spam-reporter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.24", features = [ "macros", "rt-multi-thread"] }
once_cell = "1.17"
fancy-regex = "0.10"
envy = "0.4"
